fix ipad image stretching

--- a/src/assets/scss/components/_messageBox.scss
+++ b/src/assets/scss/components/_messageBox.scss
@@ -9,7 +9,9 @@
   margin: auto;
   justify-content: center;
   img {
+    object-fit: cover;
     width: 30%;
+    height: 100%;
     min-width: 250px;
     padding: 1rem;
   }
